# minipb

./: .gitignore  LICENSE  README  README.md  minipb.py  minipb.pyi  pyproject.toml  setup.py  test.py
.github/workflows/: python-lint-test.yml  pythonpackage.yml
doc/: format_str
