[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'minipb'
authors = [
    {name = 'dogtopus'},
]
description = 'Lightweight Protocol Buffer serialize/deserialize library.'
readme = 'README.md'
# We stick to Python 3.4 language level to achieve MicroPython compatibility although we cannot guarantee that it would install or function correctly on EOL versions of CPython.
requires-python = '>=3.4'
keywords = ['protobuf', 'micropython']
license = {text = 'BSD-3-Clause'}
classifiers = [
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Embedded Systems',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Typing :: Typed',
]
dynamic = ['version']

[project.urls]
repository = 'https://github.com/dogtopus/minipb'

[tool.setuptools]
py-modules = ['minipb']
packages = ['minipb']

[tool.setuptools.package-data]
minipb = ['*.pyi', 'py.typed']

[tool.setuptools_scm]
# Intentionally left blank
